@@ -32,4 +32,11 @@ define('XML_MODE', false);
  */
 define('LAYOUT_CHECK_COOKIE', false);
 
+
+/**
+ * Changing this to true will cause javascript to parse module javascript
+ * and use the copy from the module directory. This will NOT WORK branch sites.
+ */
+define('LAYOUT_FORCE_MOD_JS', false);
+
 ?>
