@@ -1,5 +1,8 @@
 Version 2.4.5
 ------------------------------------------------------------------
+16 October 2008
++ Added LAYOUT_FORCE_MOD_JS define. Forces module javascript usage.
+
 8 September 2008
 + Not caching frontpage title because of array repeat problem.
 
